kroxylicious-kubernetes-web-hook/packaging/install/04.Service.kroxylicious-webhook.yaml
#
# Copyright Kroxylicious Authors.
#
# Licensed under the Apache Software License version 2.0, available at http://www.apache.org/licenses/LICENSE-2.0
#

apiVersion: v1
kind: Service
metadata:
  name: kroxylicious-webhook
  namespace: kroxylicious-webhook
  labels:
    app.kubernetes.io/name: kroxylicious
    app.kubernetes.io/component: webhook
spec:
  ports:
    - name: webhook
      port: 443
      targetPort: 8443
      protocol: TCP
  selector:
    app: kroxylicious-webhook
